Correção -> Tab avaliação

--- a/forms/Cadastro Representante/Cadastro Representante.html
+++ b/forms/Cadastro Representante/Cadastro Representante.html
@@ -69,107 +69,126 @@
 
                             <!-- Tab Avaliação do Representante -->
                             <div id="tab_avaliacao" class="tab-pane">
-                                <div class="col-md-4">
-                                    <label for="avaliacao_empresa">Empresa</label>
-                                    <input type="text" name="avaliacao_empresa" id="avaliacao_empresa"
-                                        class="form-control">
+                                <div class="row">
+                                    <div class="col-md-3">
+                                        <label for="avaliacao_empresa">Empresa</label>
+                                        <input type="text" name="avaliacao_empresa" id="avaliacao_empresa"
+                                            class="form-control">
+                                    </div>
+                                    <div class="col-md-3">
+                                        <label for="avaliacao_regiao">Macro Região</label>
+                                        <input type="text" name="avaliacao_regiao" id="avaliacao_regiao"
+                                            class="form-control">
+                                    </div>
+                                    <div class="col-md-3">
+                                        <label for="avaliacao_cpf">CPF</label>
+                                        <input type="text" name="avaliacao_cpf" id="avaliacao_cpf" class="form-control"
+                                            mask="000.000.000-00">
+                                    </div>
+                                    <div class="col-md-3">
+                                        <label for="avaliacao_situacao">Situação</label>
+                                        <input type="text" name="avaliacao_situacao" id="avaliacao_situacao"
+                                            class="form-control">
+                                    </div>
                                 </div>
-                                <div class="col-md-4">
-                                    <label for="avaliacao_regiao">Macro Região</label>
-                                    <input type="text" name="avaliacao_regiao" id="avaliacao_regiao"
-                                        class="form-control">
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <label for="avaliacao_nome">Nome</label>
+                                        <input type="text" name="avaliacao_nome" id="avaliacao_nome"
+                                            class="form-control">
+                                    </div>
                                 </div>
-                                <div class="col-md-4">
-                                    <label for="avaliacao_cpf">CPF</label>
-                                    <input type="text" name="avaliacao_cpf" id="avaliacao_cpf" class="form-control"
-                                        mask="000.000.000-00">
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <label for="avaliacao_email">E-mail</label>
+                                        <input type="text" name="avaliacao_email" id="avaliacao_email"
+                                            class="form-control">
+                                    </div>
                                 </div>
-                                <div class="col-md-3">
-                                    <label for="avaliacao_situacao">Situação</label>
-                                    <input type="text" name="avaliacao_situacao" id="avaliacao_situacao"
-                                        class="form-control">
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <label for="avaliacao_cnpj">CNPJ</label>
+                                        <input type="text" name="avaliacao_cnpj" id="avaliacao_cnpj"
+                                            class="form-control" mask="00.000.000/0000-00">
+                                    </div>
                                 </div>
-                                <div class="col-md-6">
-                                    <label for="avaliacao_nome">Nome</label>
-                                    <input type="text" name="avaliacao_nome" id="avaliacao_nome" class="form-control">
-                                </div>
-                                <div class="col-md-4">
-                                    <label for="avaliacao_email">E-mail</label>
-                                    <input type="text" name="avaliacao_email" id="avaliacao_email" class="form-control">
-                                </div>
-                                <div class="col-md-6">
-                                    <label for="avaliacao_cnpj">CNPJ</label>
-                                    <input type="text" name="avaliacao_cnpj" id="avaliacao_cnpj" class="form-control"
-                                        mask="00.000.000/0000-00">
-                                </div>
-                                <div class="col-md-3">
-                                    <label for="avaliacao_situacao2">Situação</label>
-                                    <input type="text" name="avaliacao_situacao2" id="avaliacao_situacao2"
-                                        class="form-control">
-                                </div>
-                                <div class="col-md-6">
-                                    <label for="avaliacao_razao">Razão Social</label>
-                                    <input type="text" name="avaliacao_razao" id="avaliacao_razao" class="form-control">
+                                <div class="row">
+                                    <div class="col-md-3">
+                                        <label for="avaliacao_situacao2">Situação</label>
+                                        <input type="text" name="avaliacao_situacao2" id="avaliacao_situacao2"
+                                            class="form-control">
+                                    </div>
+                                    <div class="col-md-9">
+                                        <label for="avaliacao_razao">Razão Social</label>
+                                        <input type="text" name="avaliacao_razao" id="avaliacao_razao" class="form-control">
 
+                                    </div>
                                 </div>
-                                <div class="col-md-6">
-
-                                    <label for="avaliacao_telefone">Telefone</label>
-                                    <input type="text" name="avaliacao_telefone" id="avaliacao_telefone"
-                                        class="form-control" mask="(00)00000-0000">
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <label for="avaliacao_telefone">Telefone</label>
+                                        <input type="text" name="avaliacao_telefone" id="avaliacao_telefone"
+                                            class="form-control" mask="(00)00000-0000">
+                                    </div>
+                                    <div class="col-md-6">
+                                        <label for="avaliacao_telefone2">Telefone</label>
+                                        <input type="text" name="avaliacao_telefone2" id="avaliacao_telefone2"
+                                            class="form-control" mask="(00)00000-0000">
+                                    </div>
                                 </div>
-                                <div class="col-md-6">
-                                    <label for="avaliacao_telefone2">Telefone</label>
-                                    <input type="text" name="avaliacao_telefone2" id="avaliacao_telefone2"
-                                        class="form-control" mask="(00)00000-0000">
+                                <div class="row">
+                                    <div class="col-md-3">
+                                        <label for="avaliacao_cep">CEP</label>
+                                        <input type="text" name="avaliacao_cep" id="avaliacao_cep" class="form-control">
+                                    </div>
+                                    <div class="col-md-9">
+                                        <label for="avaliacao_logradouro">Logradouro</label>
+                                        <input type="text" name="avaliacao_logradouro" id="avaliacao_logradouro"
+                                            class="form-control">
+                                    </div>
                                 </div>
-                                <div class="col-md-6">
-                                    <label for="avaliacao_logradouro">Logradouro</label>
-                                    <input type="text" name="avaliacao_logradouro" id="avaliacao_logradouro"
-                                        class="form-control">
+                                <div class="row">
+                                    <div class="col-md-3">
+                                        <label for="avaliacao_complemento">Complemento</label>
+                                        <input type="text" name="avaliacao_complemento" id="avaliacao_complemento"
+                                            class="form-control">
+                                    </div>
+                                    <div class="col-md-1">
+                                        <label for="avaliacao_numero">N°</label>
+                                        <input type="text" name="avaliacao_numero" id="avaliacao_numero"
+                                            class="form-control">
+                                    </div>
+                                    <div class="col-md-2">
+                                        <label for="avaliacao_uf">UF</label>
+                                        <input type="text" name="avaliacao_uf" id="avaliacao_uf" class="form-control">
+                                    </div>
+                                    <div class="col-md-3">
+                                        <label for="avaliacao_bairro">Bairro</label>
+                                        <input type="text" name="avaliacao_bairro" id="avaliacao_bairro"
+                                            class="form-control">
+                                    </div>
+                                    <div class="col-md-3">
+                                        <label for="avaliacao_cidade">Cidade</label>
+                                        <input type="text" name="avaliacao_cidade" id="avaliacao_cidade"
+                                            class="form-control">
+                                    </div>
                                 </div>
-                                <div class="col-md-2">
-                                    <label for="avaliacao_numero">Número</label>
-                                    <input type="text" name="avaliacao_numero" id="avaliacao_numero"
-                                        class="form-control">
-                                </div>
-                                <div class="col-md-4">
-                                    <label for="avaliacao_complemento">Complemento</label>
-                                    <input type="text" name="avaliacao_complemento" id="avaliacao_complemento"
-                                        class="form-control">
-                                </div>
-                                <div class="col-md-3">
-                                    <label for="avaliacao_cep">CEP</label>
-                                    <input type="text" name="avaliacao_cep" id="avaliacao_cep" class="form-control">
-                                </div>
-                                <div class="col-md-3">
-                                    <label for="avaliacao_bairro">Bairro</label>
-                                    <input type="text" name="avaliacao_bairro" id="avaliacao_bairro"
-                                        class="form-control">
-                                </div>
-                                <div class="col-md-2">
-                                    <label for="avaliacao_uf">UF</label>
-                                    <input type="text" name="avaliacao_uf" id="avaliacao_uf" class="form-control">
-                                </div>
-                                <div class="col-md-4">
-                                    <label for="avaliacao_cidade">Cidade</label>
-                                    <input type="text" name="avaliacao_cidade" id="avaliacao_cidade"
-                                        class="form-control">
-                                </div>
-                                <div class="col-md-3">
-                                    <label for="avaliacao_abertura">Abertura</label>
-                                    <input type="text" name="avaliacao_abertura" id="avaliacao_abertura"
-                                        class="form-control" mask="00/00/0000">
-                                </div>
-                                <div class="col-md-4">
-                                    <label for="avaliacao_natureza">Natureza</label>
-                                    <input type="text" name="avaliacao_natureza" id="avaliacao_natureza"
-                                        class="form-control">
-                                </div>
-                                <div class="col-md-4">
-                                    <label for="avaliacao_atividade">Atividade</label>
-                                    <input type="text" name="avaliacao_atividade" id="avaliacao_atividade"
-                                        class="form-control">
+                                <div class="row">
+                                    <div class="col-md-3">
+                                        <label for="avaliacao_abertura">Abertura</label>
+                                        <input type="text" name="avaliacao_abertura" id="avaliacao_abertura"
+                                            class="form-control date-picker">
+                                    </div>
+                                    <div class="col-md-3">
+                                        <label for="avaliacao_natureza">Natureza</label>
+                                        <input type="text" name="avaliacao_natureza" id="avaliacao_natureza"
+                                            class="form-control">
+                                    </div>
+                                    <div class="col-md-3">
+                                        <label for="avaliacao_atividade">Atividade</label>
+                                        <input type="text" name="avaliacao_atividade" id="avaliacao_atividade"
+                                            class="form-control">
+                                    </div>
                                 </div>
                             </div>
                             <!-- FIM :: Tab Avaliação do Representante -->
@@ -528,16 +547,16 @@
                                 </div>
                                 <br>
                                 <h2>Contrato de Serviço</h3>
-                                <div class="col-md-4">
-                                    <label for="contratos_modelo_servico">Modelo de Contrato</label>
-                                    <input type="text" name="contratos_modelo_servico" id="contratos_modelo_servico"
-                                        class="form-control">
-                                </div>
-                                <div class="col-md-4">
-                                    <label for="contratos_contrato_servico">Contrato de Serviço</label>
-                                    <input class="btn btn-primary margem-top-btn" type="submit" value="Enviar"
-                                        name="contratos_contrato_servico" id="contratos_contrato_servico">
-                                </div>
+                                    <div class="col-md-4">
+                                        <label for="contratos_modelo_servico">Modelo de Contrato</label>
+                                        <input type="text" name="contratos_modelo_servico" id="contratos_modelo_servico"
+                                            class="form-control">
+                                    </div>
+                                    <div class="col-md-4">
+                                        <label for="contratos_contrato_servico">Contrato de Serviço</label>
+                                        <input class="btn btn-primary margem-top-btn" type="submit" value="Enviar"
+                                            name="contratos_contrato_servico" id="contratos_contrato_servico">
+                                    </div>
                             </div>
                             <!-- FIM :: Tab Contratos -->
                         </div>
