Desenvolvido -> Regra de aprovação de representante

--- a/forms/Cadastro Representante/Cadastro Representante.html
+++ b/forms/Cadastro Representante/Cadastro Representante.html
@@ -165,7 +165,8 @@
                                     </div>
                                     <div class="col-md-2">
                                         <label for="avaliacao_uf">UF</label>
-                                        <input type="text" name="avaliacao_uf" id="avaliacao_uf" class="form-control" readonly>
+                                        <input type="text" name="avaliacao_uf" id="avaliacao_uf" class="form-control"
+                                            readonly>
                                     </div>
                                     <div class="col-md-3">
                                         <label for="avaliacao_bairro">Bairro</label>
@@ -194,6 +195,23 @@
                                         <label for="avaliacao_atividade">Atividade</label>
                                         <input type="text" name="avaliacao_atividade" id="avaliacao_atividade"
                                             class="form-control" readonly>
+                                    </div>
+                                </div>
+                                <br>
+                                <div class="row">
+                                    <div class="col-md-3">
+                                        <string>Representante Selecionado</string>
+                                        <br>
+                                        <div class="custom-radio custom-radio-inline custom-radio-primary">
+                                            <input type="radio" name="representante_selecionado" value="Sim"
+                                                id="selecionado_sim">
+                                            <label for="selecionado_sim">Sim</label>
+                                        </div>
+                                        <div class="custom-radio custom-radio-inline custom-radio-primary">
+                                            <input type="radio" name="representante_selecionado" value="Não"
+                                                id="selecionado_nao">
+                                            <label for="selecionado_nao">Não</label>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
