--- a/forms/Cadastro Representante/Cadastro Representante.html
+++ b/forms/Cadastro Representante/Cadastro Representante.html
@@ -1,5 +1,5 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <link type="text/css" rel="stylesheet" href="./style.css" />
     <link type="text/css" rel="stylesheet" href="/style-guide/css/fluig-style-guide.min.css" />
@@ -92,6 +92,9 @@
                                             <option value="Negrão">Negrão</option>
                                         </select>
                                     </div>
+                                </div>
+                                <div>
+                                    <button type="button" class="btn btn-info btn-pesquisar-representate" name="indicacao_btn_pesquisar" id="indicacao_btn_pesquisar">Pesquisar Representade</button>
                                 </div>
                             </div>
                             <!-- FIM :: Tab Indicação de Representante -->
