Correção -> botão pesquisar

--- a/forms/Cadastro Representante/Cadastro Representante.html
+++ b/forms/Cadastro Representante/Cadastro Representante.html
@@ -106,7 +106,7 @@
                                     </div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-md-9">
+                                    <div class="col-md-12">
                                         <input type="hidden" name="indicacao_empresa_hidden">
                                         <label for="indicacao_empresa">Empresa</label>
                                         <select name="indicacao_empresa" id="indicacao_empresa" class="form-control">
@@ -115,11 +115,13 @@
                                         </select>
                                     </div>
                                 </div>
-                                <div>
-                                    <button type="button" class="btn btn-info btn-pesquisar-representate"
-                                        name="indicacao_btn_pesquisar" id="indicacao_btn_pesquisar">Pesquisar
-                                        Representade
-                                    </button>
+                                <div class="row">
+                                    <div class="col-md-offset-9 col-md-3">
+                                        <button type="button" class="btn btn-info btn-pesquisar-representate"
+                                            name="indicacao_btn_pesquisar" id="indicacao_btn_pesquisar">Pesquisar
+                                            Representade
+                                        </button>
+                                    </div>
                                 </div>
                             </div>
                             <!-- FIM :: Tab Indicação de Representante -->
