Desenvolvimento do token

--- a/forms/Cadastro Representante/template_email/template.html
+++ b/forms/Cadastro Representante/template_email/template.html
@@ -1,5 +1,5 @@
 Olá! <strong>${RAZAO_EMPRESA}</strong>, segue dados para acesso ao preenchimento dos dados do representante:<br><br>
-Link: ${URL_FLUIG} <br>
-Token: ${TOKEN_PROCESSO} <br>
-Processo: ${NUM_PROCESSO} <br><br>
+<strong>Link:</strong> ${URL_FLUIG} <br>
+<strong>Processo:</strong> ${NUM_PROCESSO} <br>
+<strong>Token:</strong> ${TOKEN_PROCESSO} <br><br>
 Para enviar os dados, informe o número do processo e o token acima.
